--- a/less/buddypress.less
+++ b/less/buddypress.less
@@ -75,4 +75,9 @@
 	div.pagination .pagination-links span, div.pagination .pagination-links a {
 		font-size:100%;
 	}
+
+	// Profile pages
+	div#item-header div#item-header-content {
+		width:80.4%;
+	}
 }
